<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iconInfoID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_dialog_alert" />

            <TextView
                android:id="@+id/infoWinTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/iconInfoID"
                android:text="@string/info_window_title"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/infoMagnitudeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/infoWinTitleID"
                android:layout_toRightOf="@id/iconInfoID"
                android:text="@string/magnitude_caption" />

            <Button
                android:id="@+id/moreInfoButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/infoMagnitudeID"
                android:layout_below="@+id/infoWinTitleID"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@+id/infoMagnitudeID"
                android:background="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/more_info_button"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />


        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>